# revis

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsdown.config.ts  vitest.config.ts
.plans/: effectful-runtime-cleanup.md  sdk-native-revis-migration.md
.zed/: settings.json
docs/: REVIS.md
examples/mandelbrot/: .gitignore  README.md  benchmark.py  export-demo.sh  notes.md  program.md  pyproject.toml  reference.sha256  render.py  results.tsv
scripts/: build-dashboard.mjs
src/app/: daemon-layer.ts  project-layer.ts
src/cli/: app.ts  monitor-session.ts  monitor.tsx  runtime.ts  status-presenter.ts
src/coordination/: daemon.ts  dashboard.ts  hook-client-source.ts  promotion-git.ts  promotion-github.ts  promotion-local.ts  promotion.ts  provider-daytona.ts  provider-local.ts  provider.ts  repo.ts  runtime-access.ts  runtime.ts  setup.ts  status.ts  workspace-batch.ts  workspace-git.ts  workspaces.ts
src/core/: config.ts  error.ts  files.ts  ipc.ts  models.ts  process.ts  templates.ts  text-files.ts  time.ts
src/daemon/: control.ts  http.ts  reconcile-loop.ts  routes.ts  state.ts  workspace-supervisor.ts
src/dashboard/: api.ts  app.tsx  index.html  (+3 more)
tests/: __init__.py  cli-helpers.ts  conftest.py  coordination.test.ts  effect-runtime.test.ts  helpers.py  helpers.ts  host-git.test.ts  project-config.test.ts  promotion.test.ts  provider-daytona.test.ts  test_cli.py  test_ledger.py  test_monitor.py  test_promotion.py  test_spawning_runtime.py  test_sync_and_daemon.py  ui.test.tsx
(+111 files in other folders)
